--- a/KruBot/packages.config
+++ b/KruBot/packages.config
@@ -1,25 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AngleSharp" version="0.9.9.1" targetFramework="net472" />
+  <package id="AngleSharp" version="0.9.11" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.4" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
-  <package id="Serilog" version="2.7.1" targetFramework="net472" />
-  <package id="Serilog.Extensions.Logging" version="2.0.2" targetFramework="net461" />
+  <package id="NAudio" version="1.9.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Serilog" version="2.8.0" targetFramework="net472" />
+  <package id="Serilog.Extensions.Logging" version="2.0.4" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
@@ -35,14 +36,10 @@
   <package id="TwitchLib.Api.Helix.Models" version="1.1.0" targetFramework="net461" />
   <package id="TwitchLib.Api.V5" version="1.1.0" targetFramework="net461" />
   <package id="TwitchLib.Api.V5.Models" version="1.1.0" targetFramework="net461" />
-  <package id="TwitchLib.Client" version="3.0.3" targetFramework="net461" />
+  <package id="TwitchLib.Client" version="3.0.4" targetFramework="net472" />
   <package id="TwitchLib.Client.Enums" version="1.1.0" targetFramework="net461" />
   <package id="TwitchLib.Client.Models" version="1.1.0" targetFramework="net461" />
   <package id="TwitchLib.Communication" version="1.0.3" targetFramework="net461" />
   <package id="TwitchLib.PubSub" version="3.0.2" targetFramework="net461" />
-  <package id="VideoLAN.LibVLC.Windows" version="3.0.4" targetFramework="net472" />
-  <package id="Vlc.DotNet.Core" version="2.2.1" targetFramework="net472" />
-  <package id="Vlc.DotNet.Core.Interops" version="2.2.1" targetFramework="net472" />
-  <package id="Vlc.DotNet.Forms" version="2.2.1" targetFramework="net472" />
-  <package id="YoutubeExplode" version="4.6.1" targetFramework="net472" />
+  <package id="YoutubeExplode" version="4.7.1" targetFramework="net472" />
 </packages>
