--- a/KruBot/packages.config
+++ b/KruBot/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngleSharp" version="0.9.11" targetFramework="net472" />
+  <package id="cef.redist.x64" version="73.1.13" targetFramework="net472" />
+  <package id="cef.redist.x86" version="73.1.13" targetFramework="net472" />
+  <package id="CefSharp.Common" version="73.1.130" targetFramework="net472" />
+  <package id="CefSharp.WinForms" version="73.1.130" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net472" />
