--- a/KruBot/KruBot.csproj
+++ b/KruBot/KruBot.csproj
@@ -229,6 +229,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Credentials.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Credentials.Designer.cs">
+      <DependentUpon>Credentials.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmKruBot.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -237,6 +243,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Credentials.resx">
+      <DependentUpon>Credentials.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmKruBot.resx">
       <DependentUpon>frmKruBot.cs</DependentUpon>
     </EmbeddedResource>
