--- a/KruBot/packages.config
+++ b/KruBot/packages.config
@@ -5,6 +5,7 @@
   <package id="cef.redist.x86" version="73.1.13" targetFramework="net472" />
   <package id="CefSharp.Common" version="73.1.130" targetFramework="net472" />
   <package id="CefSharp.WinForms" version="73.1.130" targetFramework="net472" />
+  <package id="LtGt" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net472" />
@@ -18,6 +19,7 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Serilog" version="2.8.0" targetFramework="net472" />
   <package id="Serilog.Extensions.Logging" version="2.0.4" targetFramework="net472" />
+  <package id="Sprache" version="2.2.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
@@ -45,5 +47,5 @@
   <package id="TwitchLib.Client.Models" version="1.1.0" targetFramework="net461" />
   <package id="TwitchLib.Communication" version="1.0.3" targetFramework="net461" />
   <package id="TwitchLib.PubSub" version="3.0.2" targetFramework="net461" />
-  <package id="YoutubeExplode" version="4.7.4" targetFramework="net472" />
+  <package id="YoutubeExplode" version="4.7.6" targetFramework="net472" />
 </packages>
