--- a/KruBot/packages.config
+++ b/KruBot/packages.config
@@ -42,9 +42,9 @@
   <package id="TwitchLib.Api.Helix.Models" version="1.1.0" targetFramework="net461" />
   <package id="TwitchLib.Api.V5" version="1.1.0" targetFramework="net461" />
   <package id="TwitchLib.Api.V5.Models" version="1.1.0" targetFramework="net461" />
-  <package id="TwitchLib.Client" version="3.0.4" targetFramework="net472" />
-  <package id="TwitchLib.Client.Enums" version="1.1.0" targetFramework="net461" />
-  <package id="TwitchLib.Client.Models" version="1.1.0" targetFramework="net461" />
+  <package id="TwitchLib.Client" version="3.0.6-CI-20190707-175300" targetFramework="net472" />
+  <package id="TwitchLib.Client.Enums" version="3.0.6-CI-20190707-175300" targetFramework="net472" />
+  <package id="TwitchLib.Client.Models" version="3.0.6-CI-20190707-175300" targetFramework="net472" />
   <package id="TwitchLib.Communication" version="1.0.3" targetFramework="net461" />
   <package id="TwitchLib.PubSub" version="3.0.2" targetFramework="net461" />
   <package id="YoutubeExplode" version="4.7.7" targetFramework="net472" />
