--- a/KruBot/packages.config
+++ b/KruBot/packages.config
@@ -1,51 +1,53 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AngleSharp" version="0.9.11" targetFramework="net472" />
-  <package id="cef.redist.x64" version="73.1.13" targetFramework="net472" />
-  <package id="cef.redist.x86" version="73.1.13" targetFramework="net472" />
-  <package id="CefSharp.Common" version="73.1.130" targetFramework="net472" />
-  <package id="CefSharp.WinForms" version="73.1.130" targetFramework="net472" />
-  <package id="LtGt" version="1.0.1" targetFramework="net472" />
-  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.4" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net472" />
+  <package id="AngleSharp" version="0.13.0-alpha-764" targetFramework="net472" />
+  <package id="cef.redist.x64" version="75.1.14" targetFramework="net472" />
+  <package id="cef.redist.x86" version="75.1.14" targetFramework="net472" />
+  <package id="CefSharp.Common" version="75.1.141" targetFramework="net472" />
+  <package id="CefSharp.WinForms" version="75.1.141" targetFramework="net472" />
+  <package id="LtGt" version="1.0.2" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.6.0-preview7.19362.9" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="3.0.0-preview7.19362.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.0.0-preview7.19362.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="3.0.0-preview7.19362.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.0.0-preview7.19362.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.0.0-preview7.19362.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="3.0.0-preview7.19362.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.0.0-preview7.19362.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="3.0.0-preview7.19362.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="3.0.0-preview7.19362.4" targetFramework="net472" />
   <package id="NAudio" version="1.9.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
-  <package id="Serilog" version="2.8.0" targetFramework="net472" />
-  <package id="Serilog.Extensions.Logging" version="2.0.4" targetFramework="net472" />
-  <package id="Sprache" version="2.2.0" targetFramework="net472" />
+  <package id="Serilog" version="2.9.0-dev-01119" targetFramework="net472" />
+  <package id="Serilog.Extensions.Logging" version="3.0.1" targetFramework="net472" />
+  <package id="Sprache" version="2.2.1-develop-00025" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
-  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.6.0-preview7.19362.9" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.6.0-preview5.19224.8" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0-preview7.19362.9" targetFramework="net472" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
+  <package id="System.Text.Encoding.CodePages" version="4.5.1" targetFramework="net472" />
   <package id="TwitchLib" version="3.0.1" targetFramework="net461" />
-  <package id="TwitchLib.Api" version="3.0.0" targetFramework="net461" />
-  <package id="TwitchLib.Api.Core" version="1.1.0" targetFramework="net461" />
-  <package id="TwitchLib.Api.Core.Enums" version="1.1.0" targetFramework="net461" />
-  <package id="TwitchLib.Api.Core.Interfaces" version="1.1.0" targetFramework="net461" />
-  <package id="TwitchLib.Api.Core.Models" version="1.1.0" targetFramework="net461" />
-  <package id="TwitchLib.Api.Helix" version="1.1.0" targetFramework="net461" />
-  <package id="TwitchLib.Api.Helix.Models" version="1.1.0" targetFramework="net461" />
-  <package id="TwitchLib.Api.V5" version="1.1.0" targetFramework="net461" />
-  <package id="TwitchLib.Api.V5.Models" version="1.1.0" targetFramework="net461" />
-  <package id="TwitchLib.Client" version="3.0.6-CI-20190707-175300" targetFramework="net472" />
-  <package id="TwitchLib.Client.Enums" version="3.0.6-CI-20190707-175300" targetFramework="net472" />
-  <package id="TwitchLib.Client.Models" version="3.0.6-CI-20190707-175300" targetFramework="net472" />
+  <package id="TwitchLib.Api" version="3.0.6-CI-20190904-083604" targetFramework="net472" />
+  <package id="TwitchLib.Api.Core" version="3.0.6-CI-20190904-083604" targetFramework="net472" />
+  <package id="TwitchLib.Api.Core.Enums" version="3.0.6-CI-20190904-083604" targetFramework="net472" />
+  <package id="TwitchLib.Api.Core.Interfaces" version="3.0.6-CI-20190904-083604" targetFramework="net472" />
+  <package id="TwitchLib.Api.Core.Models" version="3.0.6-CI-20190904-083604" targetFramework="net472" />
+  <package id="TwitchLib.Api.Helix" version="3.0.6-CI-20190904-083604" targetFramework="net472" />
+  <package id="TwitchLib.Api.Helix.Models" version="3.0.6-CI-20190904-083604" targetFramework="net472" />
+  <package id="TwitchLib.Api.V5" version="3.0.6-CI-20190904-083604" targetFramework="net472" />
+  <package id="TwitchLib.Api.V5.Models" version="3.0.6-CI-20190904-083604" targetFramework="net472" />
+  <package id="TwitchLib.Client" version="3.0.6-CI-20190904-083526" targetFramework="net472" />
+  <package id="TwitchLib.Client.Enums" version="3.0.6-CI-20190904-083526" targetFramework="net472" />
+  <package id="TwitchLib.Client.Models" version="3.0.6-CI-20190904-083526" targetFramework="net472" />
   <package id="TwitchLib.Communication" version="1.0.3" targetFramework="net461" />
-  <package id="TwitchLib.PubSub" version="3.0.2" targetFramework="net461" />
-  <package id="YoutubeExplode" version="4.7.7" targetFramework="net472" />
+  <package id="TwitchLib.PubSub" version="3.0.6-CI-20190904-083436" targetFramework="net472" />
+  <package id="YoutubeExplode" version="4.7.9" targetFramework="net472" />
 </packages>
