--- a/KruBot/KruBot.csproj
+++ b/KruBot/KruBot.csproj
@@ -12,7 +12,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>KruBot</RootNamespace>
     <AssemblyName>KruBot</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -246,11 +246,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Credentials.cs">
+    <Compile Include="frmCredentials.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Credentials.Designer.cs">
-      <DependentUpon>Credentials.cs</DependentUpon>
+    <Compile Include="frmCredentials.Designer.cs">
+      <DependentUpon>frmCredentials.cs</DependentUpon>
     </Compile>
     <Compile Include="frmKruBot.cs">
       <SubType>Form</SubType>
@@ -260,8 +260,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Credentials.resx">
-      <DependentUpon>Credentials.cs</DependentUpon>
+    <EmbeddedResource Include="frmCredentials.resx">
+      <DependentUpon>frmCredentials.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmKruBot.resx">
       <DependentUpon>frmKruBot.cs</DependentUpon>
