Mod-defined quotes feature

--- a/KruBot/KruBot.csproj
+++ b/KruBot/KruBot.csproj
@@ -260,6 +260,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quote.cs" />
     <EmbeddedResource Include="frmCredentials.resx">
       <DependentUpon>frmCredentials.cs</DependentUpon>
     </EmbeddedResource>
